--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -58,7 +58,8 @@ go2rtc:
       - stun:8555
 ffmpeg:
   global_args: ["-hide_banner", "-loglevel", "warning"]
-  hwaccel_args: ["-hwaccel", "vaapi", "-hwaccel_device", "/dev/dri/renderD128", "-hwaccel_output_format", "yuv420p"]
+  hwaccel_args: preset-intel-qsv-h264
+  #hwaccel_args: ["-hwaccel", "vaapi", "-hwaccel_device", "/dev/dri/renderD128", "-hwaccel_output_format", "yuv420p"]
   output_args:
     record: preset-record-generic-audio-aac
   # output_args:
@@ -81,6 +82,8 @@ record:
     retain:
       default: 30
       mode: active_objects
+    pre_capture: 15
+    post_capture: 15
 
 objects:
   track:
