--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -15,7 +15,7 @@ resources:
   - ./kubernetes-dashboard/ks.yaml
   - ./loki/ks.yaml
   - ./promlens/ks.yaml
-  #- ./promtail/ks.yaml
+  - ./parseable/ks.yaml
   - ./smartctl-exporter/ks.yaml
   - ./thanos/ks.yaml
   - ./vector/ks.yaml
