--- a/kubernetes/apps/monitoring/parseable/app/parseable.sops.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/parseable.sops.yaml
@@ -6,6 +6,13 @@ metadata:
 stringData:
     username: ENC[AES256_GCM,data:QGWo6m6uxbc=,iv:G8WmYR2kDWG0Fl7G4FYk0/BtAXXAjynPPyhoh1l4ddo=,tag:1+W5QXOwTKHUF21JxrcKQw==,type:str]
     password: ENC[AES256_GCM,data:QkKIqD4ULP5p,iv:9EX7U/H/ZWKxqfLHq6uFqChBEqBdwF9kgoibKyttJpk=,tag:2ziKMKS1ZMPmbPcglcq1LA==,type:str]
+    s3.url: ENC[AES256_GCM,data:skotFeskKPWQxXRR9rm1rBR/0Q6CL7J/vbfDywcN8p8Fl4r1Y8PAZg==,iv:XpSBgvAJvck0fn3Vj0qKkjCdqeTibdrjJDeBid0gDnI=,tag:/gBGy9QXnAJTvXxiPJFG4Q==,type:str]
+    s3.access: ENC[AES256_GCM,data:vhbxl67J3OqVKOKQdaTjAC9FX+g=,iv:sSsyZLa5O8eaufobzNMasc5dK4K7HpM8fSqVPVZp0hE=,tag:QUIvWpk0CVr9FZnxe9M3UQ==,type:str]
+    s3.secret: ENC[AES256_GCM,data:KSgch2OUHygBsVUI8lewrwc6RsunkR/luFXpie0wjnROE58twrThEA==,iv:jCmwmvi5WxtqLVy3rh4KuvsfNv5Bd55qrNo9useyNXs=,tag:LfAYY6CMsP9LpJvl7ZCiAw==,type:str]
+    s3.region: ENC[AES256_GCM,data:QtiEFhnqwgSe,iv:YZ84nHugx4rl58P7HYo/Onkp3r8ycjWYPB+rge9XjFQ=,tag:CSXjaCIWX988T5rdRqtF4g==,type:str]
+    s3.bucket: ENC[AES256_GCM,data:5XJrwMjW+W+a,iv:vVdH8u61ZBlgiJnslynpbroiR7aJaWcfTG3oVk3M2o8=,tag:RlqK+j/KtESdmTYgK/CQQg==,type:str]
+    staging.dir: ENC[AES256_GCM,data:JVblsPiJjhIT,iv:xl0WHAZHJCMwrXef8TWuf2T44V86QaWeZ3UP722k4VY=,tag:Is1EpK1gRVKetQJdaO1Alg==,type:str]
+    fs.dir: ENC[AES256_GCM,data:AKX0iIvZ,iv:qwV0fSF8oSEmmdmxzoiBfa7JQBM8XLbsp93nZphzklU=,tag:klNYTF8gfWCSdYywXEc6bA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +28,8 @@ sops:
             WTUvSHJMRSsvbW50b3p4cFVkSkFLajAKVyVPQhAtYE/qFnieg1lzfRI4hRfJOJPy
             eg+fonGWlgpUPAqss1OqGRnYT7xquKgn/bSfH/z/g2b0Wv+RxnvNlg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-16T17:16:49Z"
-    mac: ENC[AES256_GCM,data:uadKKDxPVhbfdANjFL4iPgTBgvzxahVPfRNNATe97TGUYTVEVZs0UQvBTpg7DXgVENiDiLUT7vTu0NtHtY/3PVHhSk9tt2WXdvFvv4XM1r7dGqTERhwVnJ9mzHNg75cApsexF19xxipF98et2MK9VJGYYRVO9uZTl9Vzk5/8id4=,iv:Naf3Hwsryr/nnmxufeTKgFskzfshuCKICQm85mn7Xnw=,tag:ckJV4DVRsGBfow8nOELBdg==,type:str]
+    lastmodified: "2023-12-16T17:25:48Z"
+    mac: ENC[AES256_GCM,data:43z5JUzwNLeEGzQqbHfnNNkJ8MpTiaE8C7GZuBNcjX0hVCydTvFg1rfeomYS9CgT/sjVRXEmlJ0veTnzepyVp/D8WJCw+R5KjMTliqG7Q45qNhdaW7Gys90p1N9vgy6vLL4uWO+/qi4ZwRfS4Ap7YvI6UfK7iZXrjs1AWdF2pQQ=,iv:KPE2AUVLc9KNmE+AVr8N4s+M3cp82a+8ZwP7Su04gCs=,tag:ANeYAcCBtGSFRl8Ju27O4A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
