--- a/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
               tag: v0.7.1
             local: false
             env:
-              RUST_LOG: warn
+              RUST_LOG: debug
             s3ModeSecret:
             - type: env
               name: parseable-secrets
