--- a/kubernetes/apps/monitoring/parseable/app/kustomization.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/kustomization.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1beta1.json
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
+namespace: monitoring
 resources:
   - ./helmrelease.yaml
   - ./parseable.sops.yaml
