--- a/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
@@ -32,6 +32,7 @@ spec:
             image:
               repository: docker.io/parseable/parseable
               tag: v0.7.1
+              pullPolicy: Always
             local: false
             envFrom:
               - secretRef:
