--- a/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
@@ -33,6 +33,9 @@ spec:
               repository: docker.io/parseable/parseable
               tag: v0.7.1
               pullPolicy: Always
+              command:
+                - "parseable"
+                - "s3-store"
             local: false
             envFrom:
               - secretRef:
