--- a/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
@@ -24,8 +24,18 @@ spec:
     remediation:
       retries: 5
   values:
+    defaultPodOptions:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: "Always"
     controllers:
       main:
+        annotations:
+          prometheus.io/scrape: "true"
+          prometheus.io/port: "80"
+          prometheus.io/path: "/api/v1/metrics"
         replicas: 1
         containers:
           main:
