--- a/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
@@ -43,14 +43,24 @@ spec:
               repository: docker.io/parseable/parseable
               tag: v0.7.1
               pullPolicy: Always
-              command: [ "/bin/sh", "-c", "sleep 1000000" ]
-              args: ["parseable","s3-store"]
-            local: false
+              # command: [ "/bin/sh", "-c", "sleep 1000000" ]
+              # args: ["parseable","s3-store"]
+            local: true
             envFrom:
               - secretRef:
                   name: parseable-secrets
             env:
               RUST_LOG: debug
+            localModeSecret:
+              - type: env
+                name: parseable-secrets
+                prefix: P_
+                keys:
+                - addr
+                - username
+                - password
+                - staging.dir
+                - fs.dir
             s3ModeSecret:
             - type: env
               name: parseable-secrets
@@ -70,12 +80,12 @@ spec:
             allowPrivilegeEscalation: false
     persistence:
       staging:
-        enabled: false
+        enabled: true
         storageClass: ""
         accessMode: ReadWriteOnce
         size: 1Gi
       data:
-        enabled: false
+        enabled: true
         storageClass: ""
         accessMode: ReadWriteOnce
         size: 1Gi
