--- a/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
@@ -37,6 +37,7 @@ spec:
           prometheus.io/port: "80"
           prometheus.io/path: "/api/v1/metrics"
         replicas: 1
+        local: true
         containers:
           main:
             image:
