--- a/kubernetes/apps/monitoring/parseable/app/kustomization.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
 resources:
-  - ./helmrelease2.yaml
+  - ./helmreleas2.yaml
   - ./parseable.sops.yaml
