--- a/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
@@ -34,6 +34,9 @@ spec:
     ## on local mount point instead of S3 bucket)
     local: false
     ## Add environment variables to the Parseable Deployment
+    envFrom:
+      - secretRef:
+        name: parseable-secrets
     env:
       RUST_LOG: warn
     ## Enable to create a log stream and then add retention configuration
