--- a/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
@@ -34,9 +34,9 @@ spec:
     ## on local mount point instead of S3 bucket)
     local: false
     ## Add environment variables to the Parseable Deployment
-    envFrom:
-      - secretRef:
-        name: parseable-secrets
+    # envFrom:
+    #   - secretRef:
+    #     name: parseable-secrets
     env:
       RUST_LOG: warn
     ## Enable to create a log stream and then add retention configuration
@@ -65,7 +65,7 @@ spec:
         size: 1Gi
     localModeSecret:
       - type: env
-        name: parseable-secrets
+        name: parseable-env-secret
         keys:
         - addr
         - username
@@ -74,7 +74,7 @@ spec:
         - fs.dir
     s3ModeSecret:
       - type: env
-        name: parseable-secrets
+        name: parseable-env-secret
         keys:
         ## Comment / uncomment the following lines as required
         # - tls.cert.path
