--- a/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/parseable/app/helmrelease.yaml
@@ -98,7 +98,8 @@ spec:
       annotations: {}
     service:
       type: ClusterIP
-      port: 80
+      ports:
+        http: 80
     resources:
       limits:
         cpu: 500m
@@ -139,18 +140,18 @@ spec:
         # additionalLabels: {}
         # podTargetLabels: []
     ingress:
-      main:
-        enabled: true
-        className: internal
-        annotations:
-          hajimari.io/icon: mdi:poll
-        hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                service:
-                  name: main
-                  port: http
-        tls:
-          - hosts:
-              - *host
+      annotations:
+        external-dns.alpha.kubernetes.io/target: "appsmith.${SECRET_DOMAIN}"
+        hajimari.io/enable: "true"
+        hajimari.io/icon: mdi:poll
+      enabled: true
+      ingressClassName: internal
+      hosts:
+        - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          paths:
+            - path: /
+              service:
+                port: http
+      tls:
+        - hosts:
+            - *host
