parseble vector sink

--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -25,6 +25,8 @@ stringData:
     SECRET_BACKYARDCAM_USERNAME: ENC[AES256_GCM,data:Yi6o5BM=,iv:MShsCN2S1YQ26YLVDpb5QipkSwLgVzJStPjHianCpAU=,tag:OZzwtFNNId9pziN0qK3SOw==,type:str]
     SECRET_BACKYARDCAM_PASSWORD: ENC[AES256_GCM,data:wnHvCg8=,iv:a1/0OoqNuWFvIoHLp1HRFzrDg7G0oyi1qXjbTO+CnCU=,tag:AeUvV9AotchOLS/anTQN8Q==,type:str]
     SECRET_FRIGATE_PLUS_KEY: ENC[AES256_GCM,data:vhCaghO9Unl7GiiOnK/cPXtJJzTHvFxJKjDkhjDJXa+Q0urahbxcVyY1o57Vfz3F8rLvuX0h3XwMd1X5sONiKTIngcmpeyXV2zgTZSQ=,iv:GGLDJZ5BcJjcEtBVcqwGX3+ZZbqjrL4ALVFLnBxxFNk=,tag:59dRm4Kj+7aO8h5Xop4odg==,type:str]
+    SECRET_PARSEABLE_USERNAME: ENC[AES256_GCM,data:aNe7PJnOzBI=,iv:L7bCRBNH26lT+el4MoRzqhi87bs19omaAyco6M3aAUE=,tag:7kXUG7OtKQSqEk0YLelkYg==,type:str]
+    SECRET_PARSEABLE_PASSWORD: ENC[AES256_GCM,data:V+eIu8OnMZFy,iv:+mdGMbDFg8WUwQbJ969e4yXnDQWfEPVLaN25yNgNqUs=,tag:OUrAtXDaeUzBGaU4xhOMzA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -40,8 +42,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-03T01:31:00Z"
-    mac: ENC[AES256_GCM,data:3Lc0yBXNgq/xdtWbIAZW0SLwq6qBGRzXgmG9BewCf+xG0qGl1ISR1+Lb6n1Bpl8sd/v8RPaWMXwD0Pm5Yt5mA5eTjxUQOliHsrI6ZJrWQeWsj5XFWQmwcd1N5FBO+DMwcSn41PXvpQ2TxV/g3yR4jTWJEIAbIldsndKo7FRqCy0=,iv:eheUaJFXQNg9a4CUu4kNn437W4/srmgchEcl5COyq90=,tag:9j5Cj0vJCQSB2nGD6FqXxQ==,type:str]
+    lastmodified: "2023-12-16T21:57:33Z"
+    mac: ENC[AES256_GCM,data:C/xPJ+CDSIdw4zs9yrAdIo4PiouqNkLcQA9rVz5YTPW8himECrMMJ018fTfgmnNva5r3HOy1L6Y+3JWF+B0UhGYU021rfA6fcsS7StFheVdBngjV8MJQ6ZMu7ATDfD7C4xMAPBX2Q6acbei9Io7c1SkB0yTZpXkOuEt/Kp560ek=,iv:fhF1lbjH3fjkUk1zkMr3CCMKChqVOeoR5whdTPnK5rI=,tag:80m2xSJoawLAwzk/VDd1Ng==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
