--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -174,6 +174,16 @@ spec:
             url: http://influxdb.monitoring.svc.cluster.local:8086
             jsonData:
               dbName: brad
+          - name: Parseable
+            type: parseable-parseable-datasource
+            url: http://parseable.monitoring.svc.cluster.local
+            access: proxy
+            isDefault: true
+            basicAuth: true
+            basicAuthUser: ${SECRET_PARSEABLE_USERNAME}
+            secureJsonData:
+                basicAuthPassword: ${SECRET_PARSEABLE_PASSWORD}
+
     dashboards:
       default:
         cloudflared:
@@ -312,6 +322,7 @@ spec:
       - natel-discrete-panel
       - pr0ps-trackmap-panel
       - vonage-status-panel
+      - https://grafana.com/api/plugins/parseable-parseable-datasource/versions/1.0.2/download;parseable-parseable-datasource
     serviceMonitor:
       enabled: true
     ingress:
