--- a/kubernetes/apps/monitoring/vector/app/agent/config/vector.yaml
+++ b/kubernetes/apps/monitoring/vector/app/agent/config/vector.yaml
@@ -9,16 +9,21 @@ sources:
   kubernetes_source:
     type: kubernetes_logs
     use_apiserver_cache: true
-    pod_annotation_fields:
-      container_image: container_image
-      container_name: container_name
-      pod_labels: pod_labels
-      pod_name: pod_name
-      pod_annotations: pod_annotations
-    namespace_annotation_fields:
-      namespace_labels: ""
-    node_annotation_fields:
-      node_labels: ""
+    # pod_annotation_fields:
+    #   container_image: container_image
+    #   container_name: container_name
+    #   pod_labels: pod_labels
+    #   pod_name: pod_name
+    #   pod_annotations: pod_annotations
+    # namespace_annotation_fields:
+    #   namespace_labels: ""
+    # node_annotation_fields:
+    #   node_labels: ""
+
+  kubernetes_nginx:
+    type: kubernetes_logs
+    extra_label_selector: app.kubernetes.io/instance=nginx-external
+
 
 sinks:
   journald:
