--- a/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
+++ b/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
@@ -44,10 +44,10 @@ transforms:
     type: route
     inputs: kubernetes_remap
     route:
-      ingress-nginx: .custom_app_name == "ingress-nginx"
+      nginx: .custom_app_name == "ingress-nginx"
   kubernetes_remap_nginx:
     type: remap
-    inputs: kubernetes_route_nginx.ingress-nginx
+    inputs: kubernetes_route_nginx.nginx
     source: |
       .message = parse_json!(.message)
 
