--- a/kubernetes/apps/monitoring/vector/app/aggregator/kustomization.yaml
+++ b/kubernetes/apps/monitoring/vector/app/aggregator/kustomization.yaml
@@ -3,11 +3,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
-# resources:
-#   - ./helmrelease.yaml
-# configMapGenerator:
-#   - name: vector-aggregator-configmap
-#     files:
-#       - vector.yaml=./config/vector.yaml
-# configurations:
-#   - ./patches/kustomizeconfig.yaml
+resources:
+  - ./helmrelease.yaml
+configMapGenerator:
+  - name: vector-aggregator-configmap
+    files:
+      - vector.yaml=./config/vector.yaml
+configurations:
+  - ./patches/kustomizeconfig.yaml
