--- a/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
+++ b/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
@@ -45,12 +45,13 @@ transforms:
     inputs:
       - kubernetes_remap
     route:
-      nginx: .pod_labels."app.kubernetes.io/name" == "ingress-nginx"
-  # kubernetes_remap_nginx:
-  #   type: remap
-  #   inputs: kubernetes_route_nginx.nginx
-  #   source: |
-  #     .message = parse_json!(.message)
+      nginx: .custom_app_name == "ingress-nginx"
+  kubernetes_remap_nginx:
+    type: remap
+    inputs:
+      - kubernetes_route_nginx.nginx
+    source: |
+      .message = parse_json!(.message)
 
 
 
